--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,16 +44,14 @@ jobs:
         uses: oven-sh/setup-bun@v1
 
       - name: Get Cache Directories
-        id: cache-dir
-        run: echo "npm-dir=$(npm config get cache)" >> $GITHUB_OUTPUT
-      - uses: actions/cache@v4
+        uses: actions/cache@v4
         with:
           path: |
             **/node_modules
-            ${{ steps.cache-dir.outputs.npm-dir }}
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+            ~/.bun/install/cache
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lockb') }}
           restore-keys: |
-            ${{ runner.os }}-npm-
+            ${{ runner.os }}-bun-
 
       - name: Frontend Code Quality
         run: |
