ci: install bun for drupal_test job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,6 +123,9 @@ jobs:
           ddev pull platform -y
           ddev drush deploy -y
 
+      - name: Install bun.sh
+        uses: oven-sh/setup-bun@v1
+
       - name: Build front-end
         run: |
           cd web/themes/custom/contribtracker
