--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,21 +139,21 @@ jobs:
       - name: Change admin password to make it easier for Cypress tests
         run: ddev drush upwd "$CYPRESS_ADMIN_USERNAME" "$CYPRESS_ADMIN_PASSWORD"
 
-      # If Percy integration is not required, use `ddev cypress-run` to run the Cypress tests without Percy
-      - name: Cypress Test with Percy Integration
-        run: |
-          ddev exec --service cypress "git config --global --add safe.directory /e2e"
-          ddev percy-run
+      # # If Percy integration is not required, use `ddev cypress-run` to run the Cypress tests without Percy
+      # - name: Cypress Test with Percy Integration
+      #   run: |
+      #     ddev exec --service cypress "git config --global --add safe.directory /e2e"
+      #     ddev percy-run
 
-      - name: Save Cypress recordings
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: cypress-recordings
-          path: |
-            web/themes/custom/contribtracker/cypress/screenshots
-            web/themes/custom/contribtracker/cypress/videos
-          retention-days: 3
+      # - name: Save Cypress recordings
+      #   if: always()
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: cypress-recordings
+      #     path: |
+      #       web/themes/custom/contribtracker/cypress/screenshots
+      #       web/themes/custom/contribtracker/cypress/videos
+      #     retention-days: 3
 
   deploy:
     # environment:
