--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,8 +165,14 @@ jobs:
     # Dependabot PR's can't access secrets, so we can't deploy.
     if: github.actor != 'dependabot[bot]'
     steps:
-      - uses: axelerant/platformsh-deploy-action@main
+      - name: Check out repository code
+        uses: actions/checkout@v4
         with:
+          fetch-depth: 0
+      - name: Deploy to platform.sh
+        uses: axelerant/platformsh-action@main
+        with:
+          action: 'deploy'
           project-id: "brbqplxd7ycq6"
           cli-token: ${{ secrets.PLATFORMSH_CLI_TOKEN }}
           force-push: true
