chore: update Drupal core
+----------------------------------+---------+---------+-------------------------------------------------------------------------------+
| Production Changes               | From    | To      | Compare                                                                       |
+----------------------------------+---------+---------+-------------------------------------------------------------------------------+
| drupal/core                      | 10.2.7  | 10.3.0  | https://github.com/drupal/core/compare/10.2.7...10.3.0                        |
| drupal/core-composer-scaffold    | 10.2.7  | 10.3.0  | https://github.com/drupal/core-composer-scaffold/compare/10.2.7...10.3.0      |
| symfony/polyfill-ctype           | v1.29.0 | v1.30.0 | https://github.com/symfony/polyfill-ctype/compare/v1.29.0...v1.30.0           |
| symfony/polyfill-iconv           | v1.29.0 | v1.30.0 | https://github.com/symfony/polyfill-iconv/compare/v1.29.0...v1.30.0           |
| symfony/polyfill-intl-grapheme   | v1.29.0 | v1.30.0 | https://github.com/symfony/polyfill-intl-grapheme/compare/v1.29.0...v1.30.0   |
| symfony/polyfill-intl-idn        | v1.29.0 | v1.30.0 | https://github.com/symfony/polyfill-intl-idn/compare/v1.29.0...v1.30.0        |
| symfony/polyfill-intl-normalizer | v1.29.0 | v1.30.0 | https://github.com/symfony/polyfill-intl-normalizer/compare/v1.29.0...v1.30.0 |
| symfony/polyfill-mbstring        | v1.29.0 | v1.30.0 | https://github.com/symfony/polyfill-mbstring/compare/v1.29.0...v1.30.0        |
| symfony/polyfill-php72           | v1.29.0 | v1.30.0 | https://github.com/symfony/polyfill-php72/compare/v1.29.0...v1.30.0           |
| symfony/polyfill-php80           | v1.29.0 | v1.30.0 | https://github.com/symfony/polyfill-php80/compare/v1.29.0...v1.30.0           |
| symfony/polyfill-php81           | v1.29.0 | v1.30.0 | https://github.com/symfony/polyfill-php81/compare/v1.29.0...v1.30.0           |
| symfony/polyfill-php83           | v1.29.0 | v1.30.0 |

--- a/config/sync/node.type.event.yml
+++ b/config/sync/node.type.event.yml
@@ -11,7 +11,7 @@ third_party_settings:
 name: Event
 type: event
 description: 'Use <em>Event</em> content type to create events that may be referred to in event contributions.'
-help: ''
+help: null
 new_revision: false
 preview_mode: 1
 display_submitted: false
