--- a/config/sync/taxonomy.vocabulary.event_contribution_type.yml
+++ b/config/sync/taxonomy.vocabulary.event_contribution_type.yml
@@ -6,3 +6,4 @@ name: 'Event Contribution Type'
 vid: event_contribution_type
 description: 'This stores various event contribution types like session, volunteering, training, session selection panel etc.'
 weight: 0
+new_revision: false
