--- a/config/sync/taxonomy.vocabulary.event_type.yml
+++ b/config/sync/taxonomy.vocabulary.event_type.yml
@@ -6,3 +6,4 @@ name: 'Event Type'
 vid: event_type
 description: 'This vocabulary stores various event types like DrupalCamp, Drupalcon, meetup etc.'
 weight: 0
+new_revision: false
