--- a/config/sync/views.view.non_code_contributions.yml
+++ b/config/sync/views.view.non_code_contributions.yml
@@ -503,6 +503,7 @@ display:
             offset: false
             offset_label: Offset
           quantity: 9
+          pagination_heading_level: h4
       exposed_form:
         type: bef
         options:
