--- a/config/sync/views.view.patches_on_issues.yml
+++ b/config/sync/views.view.patches_on_issues.yml
@@ -374,6 +374,7 @@ display:
             offset: false
             offset_label: Offset
           quantity: 9
+          pagination_heading_level: h4
       exposed_form:
         type: basic
         options:
@@ -415,7 +416,7 @@ display:
           relationship: reverse__node__field_code_contrib_issue_link
           group_type: group
           admin_label: ''
-          plugin_id: numeric
+          plugin_id: entity_target_id
           default_action: 'not found'
           exception:
             value: all
@@ -447,6 +448,7 @@ display:
             roles: {  }
           break_phrase: false
           not: false
+          target_entity_type_id: user
       filters:
         status:
           id: status
