change sitename using drush to fail validate config test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,6 +125,9 @@ jobs:
           ddev pull platform -y
           ddev drush deploy -y
 
+      - name: Change sitename for testing
+        run: ddev drush config:set system.site name "New Site Name" -y
+
       # Validate config changes
       - name: Validate Config Export
         id: validate_config
