remove duplicate drush keywork from commands

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,8 +128,8 @@ jobs:
       - name: Import Config and Run updates
         run: |
           ddev drush cache:rebuild --yes
-          ddev drush drush config:import --yes
-          ddev drush drush updatedb --yes
+          ddev drush config:import --yes
+          ddev drush updatedb --yes
 
       # Validate config changes
       - name: Validate Config Export
