--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,10 +129,8 @@ jobs:
 
       - name: Import Config and Run updates
         run: |
-          ddev drush updatedb --no-post-updates --yes
+          ddev drush updatedb --yes
           ddev drush config:import --yes
-          ddev drush updatedb --no-cache-clear --yes
-          ddev drush cache:rebuild --yes
 
       # Validate config changes
       - name: Validate Config Export
