--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: yXadRE77Va-G6dxhd2kPYapAvbnSvTF6hO4oXiOEynI
 langcode: en
 uuid: 5c3b8751-ebc0-4b45-b23f-ddbdd377eaff
-name: 'Contrib Tracker - Update 1'
+name: 'Contribution Tracker'
 mail: contrib@axelerant.com
 slogan: ''
 page:
