change profile to null from standard

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -84,10 +84,9 @@ module:
   menu_link_content: 1
   views: 10
   cookies_gtag: 11
-  standard: 1000
 theme:
   claro: 0
   gin: 0
   stable: 0
   contribtracker: 0
-profile: standard
+profile: null
