--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -3,9 +3,6 @@ _core:
 module:
   new_relic_rpm: -20
   address: 0
-  admin_toolbar: 0
-  admin_toolbar_search: 0
-  admin_toolbar_tools: 0
   automated_cron: 0
   basic_auth: 0
   better_exposed_filters: 0
@@ -53,10 +50,13 @@ module:
   jquery_ui_touch_punch: 0
   jsonapi: 0
   language: 0
+  layout_builder: 0
+  layout_discovery: 0
   link: 0
   locale: 0
   menu_ui: 0
   mysql: 0
+  navigation: 0
   node: 0
   options: 0
   page_cache: 0
@@ -75,7 +75,6 @@ module:
   system: 0
   taxonomy: 0
   text: 0
-  toolbar: 0
   twig_tweak: 0
   update: 0
   user: 0
