--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,9 +129,9 @@ jobs:
 
       - name: Import Config and Run updates
         run: |
-          ddev drush updatedb --no-cache-clear --yes
+          ddev drush updatedb -vvv --no-cache-clear --yes
           ddev drush config:status
-          ddev drush config:import --yes
+          ddev drush config:import  -vvv --yes
           ddev drush cache:rebuild --yes
           ddev drush deploy:hook --yes
 
