--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,13 +128,7 @@ jobs:
         run: ddev php ./vendor/bin/grumphp run --tasks=phpstan --no-interaction
 
       - name: Import Config and Run updates
-        run: |
-          ddev drush --no-cache-clear updatedb --yes
-          ddev drush config:import --yes
-          ddev drush cache:rebuild --yes
-          ddev drush config:status
-          ddev drush deploy:hook --yes
-          ddev drush config:status
+        run: ./validate-export.sh
 
       # Validate config changes
       - name: Validate Config Export
