--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,7 +134,7 @@ jobs:
       - name: Import Config and Run updates
         run: |
           ddev drush --no-cache-clear updatedb --yes
-          ddev drush config:import --yesq
+          ddev drush config:import --yes
           ddev drush cache:rebuild --yes
           ddev drush config:status
           ddev drush deploy:hook --yes
