run config status to cache config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,7 +126,8 @@ jobs:
 
       - name: Rebuild cache
         run: |
-          ddev drush cache:rebuild --no-cache-clear -y
+          ddev drush cache:rebuild -y
+          ddev drush config:status
 
       # - name: Run phpstan
       #   run: ddev php ./vendor/bin/grumphp run --tasks=phpstan --no-interaction
