--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,8 +64,6 @@ jobs:
       # For Cypress.
       CYPRESS_ADMIN_USERNAME: ct-admin
       CYPRESS_ADMIN_PASSWORD: ct-admin
-      # For Percy
-      PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
@@ -139,11 +137,8 @@ jobs:
       - name: Change admin password to make it easier for Cypress tests
         run: ddev drush upwd "$CYPRESS_ADMIN_USERNAME" "$CYPRESS_ADMIN_PASSWORD"
 
-      # If Percy integration is not required, use `ddev cypress-run` to run the Cypress tests without Percy
-      - name: Cypress Test with Percy Integration
-        run: |
-          ddev exec --service cypress "git config --global --add safe.directory /e2e"
-          ddev percy-run
+      - name: Cypress Test
+        run: ddev cypress-run
 
       - name: Save Cypress recordings
         if: always()
